--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@cosmjs/launchpad": "^0.27.1",
     "@cosmjs/stargate": "^0.32.4",
-    "@keystonehq/keystone-sdk": "^0.8.1",
-    "@keystonehq/sdk": "^0.21.3",
+    "@keystonehq/animated-qr": "0.10.0",
+    "@keystonehq/keystone-sdk": "0.9.0",
+    "@keystonehq/sdk": "0.22.1",
+    "bitcoinjs-lib": "^6.1.5",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@scure/bip32": "^1.5.0",
+    "@scure/bip32": "^1.4.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
     "@types/node": "^20.12.12",
@@ -57,7 +59,6 @@
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.19",
     "bignumber.js": "^9.1.2",
-    "bitcoinjs-lib": "^7.0.0-rc.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
